--- a/defaults.yaml
+++ b/defaults.yaml
@@ -15,7 +15,7 @@ fmtDate: "%-m/%-d %a"	# 9/30 Thu
 #fmtDate: "%Y-%j %a"	# 2010-273 Thu (ISO 8601 ordinal date w/ abbreviated weekday name)
 
 # Clock format
-# If you are running Dashboard across a WAN and wish to reduce traffic (e.g. you have
+# If you are running FogBubble across a WAN and wish to reduce traffic (e.g. you have
 # 3G and a low monthly usage allowance) you might wish to omit the display of seconds.
 fmtClk: "%-I:%M:%S %p"	# 4:00:00 PM
 #fmtClk: "%-I:%M %p"	# 4:00 PM
