--- a/defaults.yaml
+++ b/defaults.yaml
@@ -33,3 +33,6 @@ nLogicalDayEnds: 5
 # unworked protected time remaining in the given look-back period.
 nLookBackPeriodDays: 7	# how many days to look back for timesheet intervals
 hrsLookBackPeriod: 40	# number of working hours in look-back period
+
+# Timescale for displaying hours remaining per project protected time
+hrsLogarithmicReference: 0.1  # i.e. 6 minutes
